[metadata]
name = radar
summary = OpenStack Third Party Dashboard
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Framework :: Pecan/WSME
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Topic :: Internet :: WWW/HTTP

[files]
packages =
    radar
data_files =
    etc/radar =
        etc/radar.conf.sample

[entry_points]
console_scripts =
    radar-api = radar.api.app:start
    radar-db-manage = radar.db.migration.cli:main
    radar-update-daemon = radar.worker.daemon:run

